--- a/frontend/package.json
+++ b/frontend/package.json
@@ -33,6 +33,7 @@
     "react-router-dom": "^7.7.1",
     "react-spinners": "^0.17.0",
     "recharts": "^3.1.2",
+    "socket.io-client": "^4.8.1",
     "yup": "^1.7.0",
     "zustand": "^5.0.7"
   },
