--- a/frontend/package.json
+++ b/frontend/package.json
@@ -23,6 +23,7 @@
     "lodash": "^4.17.21",
     "lucide-react": "^0.537.0",
     "react": "^19.1.1",
+    "react-beautiful-dnd": "^13.1.1",
     "react-circular-progressbar": "^2.2.0",
     "react-dom": "^19.1.1",
     "react-dropzone": "^14.3.8",
@@ -46,6 +47,7 @@
     "@types/lodash": "^4",
     "@types/node": "^24.2.0",
     "@types/react": "^19.1.9",
+    "@types/react-beautiful-dnd": "^13",
     "@types/react-dom": "^19.1.7",
     "@types/react-file-icon": "^1",
     "@vitejs/plugin-react": "^4.7.0",
