--- a/frontend/package.json
+++ b/frontend/package.json
@@ -16,6 +16,7 @@
     "axios": "^1.11.0",
     "chart.js": "^4.5.0",
     "chartjs-adapter-date-fns": "^3.0.0",
+    "clsx": "^2.1.1",
     "date-fns": "^4.1.0",
     "html2canvas": "^1.4.1",
     "immer": "^10.1.1",
@@ -35,6 +36,7 @@
     "react-spinners": "^0.17.0",
     "recharts": "^3.1.2",
     "socket.io-client": "^4.8.1",
+    "tailwind-merge": "^3.3.1",
     "yup": "^1.7.0",
     "zustand": "^5.0.7"
   },
