unit test cases

--- a/backend/.env
+++ b/backend/.env
@@ -21,3 +21,6 @@ OPENAI_API_KEY=sk-proj-dXXMCZoMFdgAWHX-fCF6te-mlgRwkmjLpogx2goUmHmsLFNOHDdrMm3fW
 
 # Gemini Configuration
 GEMINI_API_KEY=AIzaSyBpIBRP0UJchI9-mwPBTKM6HHiHM_gh-M0
+
+# ElevenLabs Configuration
+ELEVENLABS_API_KEY=sk_6f9168d1d1dd9cd233584e326aeacfebd52a67e9a7257c8f
